updates:  fixs from agents